# gata-platform

./: .env.example  .gitignore  CLAUDE.md  README.md  clean_warehouse.py  docker-compose.yml  main.py  pyproject.toml  render.yaml  supported_connectors.yaml  tenants.yaml  tenants.yml
services/mock-data-engine/: README.md  config.py  main.py  orchestrator.py  pyproject.toml
services/mock-data-engine/.dlt/: config.toml
services/mock-data-engine/schemas/: amazon_ads.py  amplitude.py  bigcommerce.py  bing_ads.py  facebook_ads.py  google_ads.py  google_analytics.py  linkedin_ads.py  meta_ads.py  mixpanel.py  shopify.py  stripe.py  tiktok_ads.py  woocommerce.py
services/mock-data-engine/sources/digital_analytics/: shared_config.py
services/mock-data-engine/utils/: bsl_mapper.py
services/platform-api/: Dockerfile  README.md  bsl_agent.py  bsl_model_builder.py  llm_provider.py  main.py  materializer.py  mcp_server.py  models.py  pyproject.toml  query_builder.py  test_bsl_agent.py  test_bsl_query.py  test_main.py  test_query_builder.py
services/platform-api/semantic_configs/: gata_swamp.yaml  stark_industries.yaml  tyrell_corp.yaml  wayne_enterprises.yaml  yale_like_yale.yaml
warehouse/: pyproject.toml  sandbox.duckdb
warehouse/data/: sandbox.duckdb.wal
warehouse/gata_transformation/: README.md  dbt_project.yml  profiles.yml  selectors.yml
warehouse/gata_transformation/macros/dbt_metadata/: metadata_ops.sql
warehouse/gata_transformation/macros/factories/: build_ads_blended_fact.sql  build_analytics_fact.sql  build_dim_campaigns.sql  build_dim_users.sql  build_ecommerce_fact.sql  build_fct_ad_performance.sql  build_fct_events.sql  build_fct_orders.sql  build_fct_sessions.sql  generate_intermediate_unpacker.sql
warehouse/gata_transformation/macros/onboarding/: build_master_hub.sql  generate_master_model.sql  generate_staging_pusher.sql  load_clients.sql  sync_to_master_hub.sql  sync_to_schema_history.sql
warehouse/gata_transformation/macros/utils/: apply_tenant_logic.sql  data_cleaning.sql  extract_ga4_param.sql  extract_json.sql  extract_utm.sql  funnel_utils.sql  gen_tenant_key.sql  generate_master_union.sql  get_client_logic.sql  get_clients_to_process.sql  get_session_attribution_logic.sql  get_tenant_config.sql  metadata_utilities.sql  sql_utilities.sql  standard_ad_columns.sql
(+423 files in other folders)
