[project]
name = "warehouse"
version = "0.1.0"
description = "dbt project for Gata Platform"
requires-python = ">=3.11"
dependencies = [
    "dbt-duckdb>=1.8.0",
    "dbt-core>=1.8.0",
    "dbt-core-mcp>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gata_transformation"]
